<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskSpecificActivity">

    <TextView
        android:id="@+id/task_specific_header_title_text"
        ndroid:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_specific_header_title_text"
        android:textSize="18dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/task_specific_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_specific_name"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="133dp" />

    <TextView
        android:id="@+id/task_specific_interval_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_specific_interval_text"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="174dp" />

    <TextView
        android:id="@+id/task_specific_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_specific_description_text"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="215dp" />

    <TextView
        android:id="@+id/task_specific_room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_specific_room_name"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="256dp" />

    <CheckBox
        android:id="@+id/task_specific_checkbox_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_specific_checkbox_text"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="299dp" />

    <Button
        android:id="@+id/task_specific_btn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_specific_btn_text"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="381dp" />
</androidx.constraintlayout.widget.ConstraintLayout>